# MDT

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: auth.rs  chat.rs  ffmpeg.rs  jwt_auth.rs  main.rs  prompts.rs  transcription.rs
