[package]
name = "mdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tempfile = "3.2.0"
anyhow = "1.0.70"
openai-rust = "0.2.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
futures = "0.3"
actix-web = "4"
actix-multipart = "0.5.0"
actix-cors = "0.6.4"
futures-util = "0.3.25"
image = "0.24.5"
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
